--- a/Research Notebook.ipynb
+++ b/Research Notebook.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1,
       "metadata": {
         "id": "J5jWkPAL8UXI"
       },
@@ -25,13 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "SmY77KMc8wL7"
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('CC GENERAL.xls')\n",
+        "df = pd.read_csv('Data.xls')\n",
         "df_copy = df.copy()\n",
         "df_copy = df.drop(columns=['CUST_ID'])"
       ]
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +62,7 @@
               "(8950, 17)"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -94,7 +94,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -422,7 +422,7 @@
               "9  1164.770591        100.302262          0.000000      12  "
             ]
           },
-          "execution_count": 29,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -433,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -479,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -746,7 +746,7 @@
               "max    50721.483360      76406.207520          1.000000    12.000000  "
             ]
           },
-          "execution_count": 31,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -768,7 +768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -801,7 +801,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -830,7 +830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 9,
       "metadata": {
         "id": "krbTKuYK958F"
       },
@@ -842,7 +842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "LKrWMFxjMXG4"
       },
@@ -880,7 +880,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -913,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 13,
       "metadata": {
         "id": "CpkNt1OvQIa3"
       },
@@ -933,7 +933,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -985,7 +985,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -994,16 +994,16 @@
               "[6424505.846444715,\n",
               " 3125376.044704877,\n",
               " 2055994.4910834832,\n",
-              " 1521617.7616870322,\n",
+              " 1521617.7616870315,\n",
               " 1228453.201752275,\n",
               " 1020006.6244196295,\n",
-              " 875588.9105411017,\n",
+              " 875588.9105411016,\n",
               " 776379.74695432,\n",
               " 707452.2166161373,\n",
               " 641210.872579759]"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1021,7 +1021,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 16,
       "metadata": {
         "id": "1Tyc4_7xRAOA"
       },
@@ -1035,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1054,9 +1054,17 @@
           },
           "metadata": {},
           "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Silhouette Score: 0.5557777466514102\n"
+          ]
         }
       ],
       "source": [
+        "from sklearn.metrics import silhouette_score\n",
         "k = 3\n",
         "kmeans = KMeans(n_clusters=k, **kmeans_set)\n",
         "kmeans.fit(df_scaled)\n",
@@ -1076,12 +1084,16 @@
         "plt.ylabel('Principal Component 2')\n",
         "plt.legend(title='Cluster')\n",
         "plt.grid(True)\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "# Calculate the silhouette score\n",
+        "silhouette_avg = silhouette_score(df_scaled, kmeans.labels_)\n",
+        "print(\"Silhouette Score:\", silhouette_avg)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1143,7 +1155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
